<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#FFF">

		<LinearLayout
		    android:id="@+id/linearLayout1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center" 
		    >

			<Button
			    android:id="@+id/bookIntroBtn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button_selector"
			    android:padding="5dp"
			    android:text="@string/bookintro" />

			<Button android:padding="5dp"
			    android:id="@+id/contentBtn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button_selector"
			    android:text="@string/content" />

			<Button android:padding="5dp"
			    android:id="@+id/fulltextBtn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button_selector"
			    android:text="@string/fulltext" />

			<Button android:padding="5dp"
			    android:id="@+id/searchBtn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button_selector"
			    android:text="@string/search" />

			<Button android:padding="5dp"
			    android:id="@+id/addFavoriteBtn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button_selector"
			    android:text="@string/addfavorite" />

		</LinearLayout>

		<ProgressBar
		    android:id="@+id/loadProgressBar"
		    style="?android:attr/progressBarStyleHorizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="3dp" />

		<com.omdasoft.android.customview.MyWebView
		    android:id="@+id/webView"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
		</com.omdasoft.android.customview.MyWebView>

	</LinearLayout>
